# saorikikuchi.github.io

./: README.md  _quarto.yml  about.qmd  index.html  index.qmd  pyproject.toml  saorikikuchi_system_info.html  saorikikuchi_system_info.ipynb  saorikikuchi_system_info.qmd  saorikikuchi_system_info.tex
_site/: index.html  saorikikuchi_system_info.docx  saorikikuchi_system_info.html
_site/saorikikuchi.github.io/: index.html
_site/site_libs/bootstrap/: bootstrap.min.css
docs/: about.html  index.html  search.json
